# bilin

./: .gitignore  AGENT_GUIDE.md  DESIGN.md  Makefile  NOTICE  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  RELEASE_NOTES.md  package.json  pnpm-lock.yaml
apps/api/: pyproject.toml
apps/api/src/bilin_api/: __init__.py  acceptance.py  article_store.py  arxiv.py  arxiv_recommendations.py  branding.py  citation_service.py  cli.py  content_notice.py  credentials.py  database.py  doctor.py  embedding_service.py  export_service.py  glossary_service.py  golden.py  importer.py  latexml_parser.py  llm.py  main.py  note_service.py  obsidian_service.py  openapi.py  provider_presets.py  qa_service.py  reader_card_service.py  repositories.py  schemas.py  settings.py  translation_service.py  worker.py
apps/api/src/bilin_api/api/: articles.py  doctor.py  events.py  health.py  imports.py  jobs.py  libraries.py  providers.py  recommendations.py  translation_memory.py
apps/api/src/bilin_api/migrations/: __init__.py
apps/api/src/bilin_api/migrations/global/: 001_initial.sql  __init__.py  (+4 more)
apps/api/tests/: conftest.py  test_api.py  test_arxiv_import.py  test_citations.py  test_database.py  test_docs.py  test_doctor.py  test_embeddings.py  test_export.py  test_glossary.py  test_golden.py  test_integration_optional.py  test_jobs.py  test_latexml_parser.py  test_libraries.py  test_notes.py  test_obsidian.py  test_provider_models.py  test_qa.py  test_reader_cards.py  test_translation.py
apps/api/tests/fixtures/latexml/: minimal.html
(+60 files in other folders)
